Update Requests package in Pipfile
The requests package is explicitly set to >2.20.0, as earlier versions contained a potential security vulnerability involving HTTP Authorization headers: https://nvd.nist.gov/vuln/detail/CVE-2018-18074

--- a/stockwatcher/Pipfile
+++ b/stockwatcher/Pipfile
@@ -4,7 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
+# Explicitly set requests to be >=2.20.0 due to a security vulnerability in v. <=2.19.1:
+# https://nvd.nist.gov/vuln/detail/CVE-2018-18074
+requests = ">=2.20.0"
 
 [dev-packages]
 
